--- a/SimpleTodoList.html
+++ b/SimpleTodoList.html
@@ -3,19 +3,12 @@
 </head>
 
 <body>
-  <div class="container">
-      <header>
-          <h1>Todo List</h1>
-      </header>
-      <ul>
-          {{#each tasks}}
-              <li>{{> task}}</li>
-          {{/each}}
-      </ul>
+  <h1>Welcome to Meteor!</h1>
 
-  </div>
+  {{> hello}}
 </body>
 
-<template name="task">
-    {{text}}
+<template name="hello">
+  <button>Click Me</button>
+  <p>You've pressed the button {{counter}} times.</p>
 </template>
